# cmake_example

./: CMakeLists.txt
src/: main.cpp
